@@ -2,6 +2,7 @@
 = ActiveMerchant CHANGELOG
 
 == HEAD
+* GlobalCollect: Improve support for Naranja and Cabal card types [dsmcclain] #4286
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
